After CMF 1.5.3

  Bug Fixes

    - CMFCore.FSImage and FSFile: Unlike the current behavior of Zope itself,
      FSImage and FSFile would set a content-length response header for 304
      (not modified) responses, which should not be done according to 
      RFC 2616. It won't do so anymore, but Zope itself will still force a
      content-length header in ZServer.HTTPResponse. This misbehavior
      has been filed as a Zope issue (http://www.zope.org/Collectors/Zope/1866).
      (http://www.zope.org/Collectors/CMF/372)

    - PortalFolder: Improved the _checkId method.
      Method Aliases mask objects with matching IDs. Thus _checkId() and
      checkIdAvailable() now make sure non-managers can't create objects with
      IDs already taken by Method Aliases of the current folder.

    - CMFDefault.Image and CMFDefault.File: When calling the constructor,
      any intelligent content type detection would be destroyed by the
      call to initialize Dublin Core values, which would overwrite the
      content_type. It is now preserved, if possible.
      (http://www.zope.org/Collectors/CMF/370)

CMF 1.5.3 (2005/08/07)

  Bugs fixed

    - When the CMFBTreeFolder was moved into CMFCore, its base class was
      changed to PortalFolderBase. This broke an assumption in the
      portal_syndication tool that relied on all syndication containers
      deriving from PortalFolder (http://www.zope.org/Collectors/CMF/369)

CMF 1.5.3-beta (2005/08/02)

  Bugs Fixed

    - Changed the INSTALL_SVN instructions to conform to the new branch
      and tag naming scheme instituted for the subversion repository.

    - Apply an interim fix for slow pathwalking implementation in
      development mode on Windows (http://www.zope.org/Collectors/CMF/367)
      Note that a better fix would be to leverage pywin32 APIs for
      file / directory monitoring.

    - FSObject.manage_doCustomize() was broken for folderish objects on Zope