@@ -2,6 +2,11 @@ After CMF 1.5.3
 
   Bug Fixes
 
+    - CMFCore.FSDTMLMethod: Cache headers from the Caching Policy Manager
+      never got set for FS DTML Methods due to the way PortalContent's
+      __call__ method called the template.
+      (http://www.zope.org/Collectors/CMF/374)
+
     - CMFCore.FSImage and FSFile: Unlike the current behavior of Zope itself,
       FSImage and FSFile would set a content-length response header for 304
       (not modified) responses, which should not be done according to 
